# Honeycrisp

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
agent/: devRunner.ts  runAgent.ts  tsconfig.json
agent/engines/: claudeCodeCli.ts
docs/: architecture.md  roadmap.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppTitleBar.tsx  CanvasGrid.tsx  CanvasPreview.tsx  ChatRail.tsx  MessageBubble.tsx  SidebarResizeHandle.tsx  WorkspaceCanvas.tsx
src/components/ui/: input-group.tsx
src/hooks/: useResizableSidebar.ts  useWebKitGestureZoom.ts
src/lib/: agentClient.ts  canvasControls.ts  messages.ts
types/: agent.ts  chat.ts  claude.ts
