[package]
name = "honeycrisp"
version = "0.1.0"
description = "A Mac app for generating native SwiftUI interfaces."
authors = ["luketucich <luketucich@gmail.com>"]
license = ""
repository = "https://github.com/luketucich/Honeycrisp"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "honeycrisp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
